# cosmic-anomaly-detector

./: .gitignore  Dockerfile  GUI_README.md  README.md  config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh
.copilot/: README.md
.github/: copilot-instructions.md
.github/workflows/: ci-cd.yml  ci.yml.disabled
docs/: PHASE3_COMPLETION.md  PROJECT_PLAN.md  README.md
output/real_jwst/: results.json
scripts/: README.md  analyze_real_jwst.py  batch_analyze.py  demo_ml.py  demo_ml_simple.py  demo_physics_validation.py  test_phase3.py
scripts/examples/: 01_jwst_data_access.py  02_ir_excess_detection.py  03_wavelet_detection_demo.py  README.md
src/cosmic_anomaly_detector/: __init__.py  cli.py
src/cosmic_anomaly_detector/core/: analyzer.py  baseline.py  classifier.py  detector.py
src/cosmic_anomaly_detector/eval/: eval.py
src/cosmic_anomaly_detector/gui/: __init__.py  main_window.py
src/cosmic_anomaly_detector/processing/: __init__.py  advanced_cv.py  algorithms.py  gpu_accelerator.py  image_processor.py  parallel_pipeline.py  preprocess.py
src/cosmic_anomaly_detector/reporting/: __init__.py  report.py
src/cosmic_anomaly_detector/utils/: __init__.py  config.py  jwst_access.py  logging.py  pydantic_config.py  run_manifest.py  seti_catalog.py
tests/: conftest.py  test_algorithms.py  test_baseline.py  test_detector.py  test_gpu_accelerator.py  test_gravity_adapter.py  test_parallel_pipeline.py  test_preprocess.py  test_report.py  test_run_manifest.py
